--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,6 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # man im insaannee, yeah its true
 # man im insaannee, yeah its 
 #
-#
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
@@ -24,4 +23,4 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 
 android.nonTransitiveRClass=false
-version = 1.7-alpha
+version = 1.1-beta
