--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 
 android.nonTransitiveRClass=false
-version = 1.1-beta
+version = 1.1-papa
