--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # man im insaannee, yeah its true
 # man im insaannee, yeah its 
 #
+#
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
@@ -23,4 +24,4 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 
 android.nonTransitiveRClass=false
-VERSION_NAME=1.1-papa
+VERSION_NAME=1.2-beta
