--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 
 android.nonTransitiveRClass=false
-VERSION_NAME_TEST=1.7-papa
+VERSION_NAME_TEST=1.7-alpha
