--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 
 android.nonTransitiveRClass=false
-VERSION_NAME=2.2-nana
+VERSION_NAME=2.2-papa
