--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,8 @@ android.useAndroidX=true
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared ipn the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
+# VERSION_NAME=comment
 
 android.nonTransitiveRClass=false
+VERSION_NAME_TEST=testing
 VERSION_NAME=2.2-papa
