--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -35,6 +35,7 @@ jobs:
           commit_hashes=$(git rev-list -n 2 origin/main -- gradle.properties)
           second_last_commit_hash=$(echo "$commit_hashes" | tail -n 1)
           commit_info=$(git show $second_last_commit_hash:gradle.properties)
+          echo "$commit_info"
           previous_version=$(echo "$commit_info" | grep 'VERSION_NAME' | cut -d "=" -f2 | tr -d '[:space:]')
           previous_line=$(echo "$commit_info" | grep -n 'VERSION_NAME' | cut -d ":" -f1)
           echo "prev-version=$previous_version" >> $GITHUB_ENV
