--- a/gradle.properties
+++ b/gradle.properties
@@ -25,5 +25,5 @@ android.useAndroidX=true
 # VERSION_NAME=comment
 
 android.nonTransitiveRClass=false
-# VERSION_NAME_TEST=testing
+VERSION_NAME_TEST=testing
 VERSION_NAME=2.1-nana
