--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -36,8 +36,8 @@ jobs:
           second_last_commit_hash=$(echo "$commit_hashes" | tail -n 1)
           commit_info=$(git show $second_last_commit_hash:gradle.properties)
           echo "$commit_info"
-          previous_version=$(echo "$commit_info" | grep '^VERSION_NAME^' | cut -d "=" -f2 | tr -d '[:space:]')
-          previous_line=$(echo "$commit_info" | grep -n '^VERSION_NAME^' | cut -d ":" -f1)
+          previous_version=$(echo "$commit_info" | grep '^VERSION_NAME=' | cut -d "=" -f2 | tr -d '[:space:]')
+          previous_line=$(echo "$commit_info" | grep -n '^VERSION_NAME=' | cut -d ":" -f1)
           echo "$previous_version"
           echo "$previous_line"
           echo "prev-version=$previous_version" >> $GITHUB_ENV
@@ -46,8 +46,8 @@ jobs:
       - name: Get current version
         id: get-current-version
         run: |
-          echo "current_version=$(grep '^VERSION_NAME^' gradle.properties | cut -d "=" -f2 | tr -d '[:space:]')" >> $GITHUB_ENV
-          echo "current_version_line=$(grep -n '^VERSION_NAME^' gradle.properties | cut -d ":" -f1)" >> $GITHUB_ENV
+          echo "current_version=$(grep '^VERSION_NAME=' gradle.properties | cut -d "=" -f2 | tr -d '[:space:]')" >> $GITHUB_ENV
+          echo "current_version_line=$(grep -n '^VERSION_NAME=' gradle.properties | cut -d ":" -f1)" >> $GITHUB_ENV
 
       - name: Check for version change
         run: |
@@ -63,7 +63,7 @@ jobs:
       - name: Update version in README Badge
         if: env.VERSION_NOT_CHANGED != 'true'
         run: |
-          version=$(grep '^VERSION_NAME^' gradle.properties | cut -d "=" -f2 | tr -d '[:space:]')
+          version=$(grep '^VERSION_NAME=' gradle.properties | cut -d "=" -f2 | tr -d '[:space:]')
           version=$(echo "$version" | sed 's/-/%E2%80%90/g')
           echo "$version"
           sed -i "s/\(badge\/version-v.*-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
@@ -72,7 +72,7 @@ jobs:
       - name: Update line number in README Badge
         if: env.VERSION_LINE_NOT_CHANGED != 'true'
         run: |
-          current_line=$(grep -n '^VERSION_NAME^' gradle.properties | cut -d ":" -f1)
+          current_line=$(grep -n '^VERSION_NAME=' gradle.properties | cut -d ":" -f1)
           echo "$current_line"
           sed -i "s/properties#L.*/properties#L$current_line\)/" README.md
           cat README.md
@@ -90,7 +90,7 @@ jobs:
           author: ${{ github.actor }} <${{ github.actor }}@linkedin.com>
           title: 'Update readme'
           body: ${{ env.COMMIT_MESSAGE }}
-          commit-message: ${{ env.COMMIT_MESSAGE }}
+          commit-message: ${{ env.COMMIT_MESSAGE }}2.1
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Turn On PR Auto-Merge
