--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -18,5 +18,10 @@ jobs:
           java-version: '11'
           distribution: 'zulu'
 
+      - name: setup gradle
+        run: |
+          git update-index --chmod=+x gradlew
+          git commit -m "Make gradlew executable"
+
       - name: Build
         run: ./gradlew build
