--- a/gradle.properties
+++ b/gradle.properties
@@ -25,5 +25,6 @@ android.useAndroidX=true
 # VERSION_NAME=comment
 
 android.nonTransitiveRClass=false
-VERSION_NAME_TEST=2.8
-VERSION_NAME=2.0-dada
+
+
+VERSION_NAME=2.0-opop
