--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Check for version change
         run: |
-          if [ ${{ env.prev_version }} != ${{ env.current_version }} ]; then
+          if [ "${{ env.prev_version }}" != "${{ env.current_version }}" ]; then
             echo "No change in version."
             echo "VERSION_CHANGED=true" >> $GITHUB_ENV
           fi
