--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -51,11 +51,11 @@ jobs:
 
       - name: Check for version change
         run: |
-          if [ "${{ env.prev_version }}" != "${{ env.current_version }}" ]; then
+          if [ "${{ env.prev_version }} != ${{ env.current_version }}" ]; then
             echo "No change in version."
             echo "VERSION_CHANGED=true" >> $GITHUB_ENV
           fi
-          if [ "${{ env.prev_version_line }}" != "${{ env.current_version_line }}" ]; then
+          if [ "${{ env.prev_version_line }} != ${{ env.current_version_line }}" ]; then
             echo "No change in version line."
             echo "VERSION_LINE_CHANGED=true" >> $GITHUB_ENV
           fi
