--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 # For more details on how to configure your build et visit
 # http://www.gradle.org/docs/current
 # Specifies the JVM arguments used 
-# The setting is particularly useful for tweaking memory settings.
+# The setting is particularly useful for tweaking m
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects.
