--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -59,6 +59,8 @@ jobs:
           if [ "${{ env.prev_version_line }}" != "${{ env.current_version_line }}" ]; then
             echo "VERSION_LINE_CHANGED=true" >> $GITHUB_ENV
           fi
+          echo "111: ${{ env.VERSION_CHANGED }}"
+          echo "222: ${{ env.VERSION_LINE_CHANGED }}"
 
       - name: Update version in README Badge
         if: env.VERSION_CHANGED != 'true'
