--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -108,7 +108,7 @@ jobs:
 
       - name: Delete branch
         if: |
-          env.VERSION_NOT_CHANGED != 'true' &&
-          env.VERSION_LINE_NOT_CHANGED != 'true'
+          env.VERSION_NOT_CHANGED == 'true' ||
+          env.VERSION_LINE_NOT_CHANGED == 'true'
         run: |
           git push origin --delete github-actions/readme-update
