--- a/gradle.properties
+++ b/gradle.properties
@@ -8,14 +8,7 @@
 # The setting is particularly useful for tweaking m
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects.
-# http://www.gradle.org/docs/current
-# org.gradle.parallel=true
-# man im insaa
-
-
-
-
+# This option should only be used with decoupled proje
 
 # AndroidX
 # Android operating system, and which are packaged with your app's APK
