--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -59,11 +59,11 @@ jobs:
           if [ "${{ env.prev_version_line  !=  env.current_version_line }}" ]; then
             echo "VERSION_LINE_CHANGED=true" >> $GITHUB_ENV
           fi
-          echo "111: ${{ env.VERSION_CHANGED }}"
-          echo "222: ${{ env.VERSION_LINE_CHANGED }}"
+          echo env.VERSION_CHANGED
+          echo env.VERSION_LINE_CHANGED
 
       - name: Update version in README Badge
-        if: ${{ env.VERSION_CHANGED != 'true' }}
+        if: env.VERSION_CHANGED
         run: |
           version=$(grep '^VERSION_NAME=' gradle.properties | cut -d "=" -f2 | tr -d '[:space:]')
           version=$(echo "$version" | sed 's/-/%E2%80%90/g')
@@ -72,7 +72,7 @@ jobs:
           cat README.md
 
       - name: Update line number in README Badge
-        if: ${{ env.VERSION_LINE_CHANGED != 'true' }}
+        if: env.VERSION_LINE_CHANGED
         run: |
           current_line=$(grep -n '^VERSION_NAME=' gradle.properties | cut -d ":" -f1)
           echo "$current_line"
