--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 # For more details on ild et visit
 # http://www.gradle.org
 # Specifies the JVM arguments used 
-# The setting is particularly useful for tweaking m
+# The setting is particularly useful f
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
 # AndroidX
