--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -55,12 +55,18 @@ jobs:
         run: |
           if [ "${{ env.prev_version  != env.current_version }}" ]; then
             echo "VERSION_CHANGED=true" >> $GITHUB_ENV
+          else
+            echo "VERSION_CHANGED=false" >> $GITHUB_ENV
           fi
+      
           if [ "${{ env.prev_version_line  !=  env.current_version_line }}" ]; then
             echo "VERSION_LINE_CHANGED=true" >> $GITHUB_ENV
+          else
+            echo "VERSION_LINE_CHANGED=false" >> $GITHUB_ENV
           fi
-          echo ${{ env.VERSION_CHANGED }}
-          echo ${{ env.VERSION_LINE_CHANGED }}
+
+          echo "${{ env.VERSION_CHANGED }}"
+          echo "${{ env.VERSION_LINE_CHANGED }}"
 
       - name: Update version in README Badge
         if: env.VERSION_CHANGED
