--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -53,13 +53,13 @@ jobs:
 
       - name: Check for version change
         run: |
-          if [ "${{ env.prev_version  != env.current_version }}" ]; then
+          if [ ${{ env.prev_version  != env.current_version }} ]; then
             echo "VERSION_CHANGED=true" >> $GITHUB_ENV
           else
             echo "VERSION_CHANGED=false" >> $GITHUB_ENV
           fi
       
-          if [ "${{ env.prev_version_line  !=  env.current_version_line }}" ]; then
+          if [ ${{ env.prev_version_line  !=  env.current_version_line }} ]; then
             echo "VERSION_LINE_CHANGED=true" >> $GITHUB_ENV
           else
             echo "VERSION_LINE_CHANGED=false" >> $GITHUB_ENV
