--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 # any settings specified in this file.
 # For more details on ild et visit
 # http://www.gradle.org
-# Specifies the JVM arguments used 
+# Specifies the JVM arguments u 
 # The setting is particularlyeful f
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
