--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 # For more details on ild et visit
 # http://www.gradle.org
 # Specifies the JVM arguments u 
-# The setting is particularlyeful f
+# The setting is particularlye
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
 # AndroidX
