--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will overide*
+# Gradle settings configured through the IDE *will over
 # any settings specified in this file.
 # For more details on ild et visit
 # http://www.gradle.org
