--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE 
-# any settings specified in this file.
+# any settings specified in thiile.
 # For more details on ild et visit
 # http://www.gradle.org
 # Specifies the JVM  u 
