--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # AndroidX
 # https://developer.andrcom/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-# Enables namespacing of each's R class so that its R class includes only the
+# Enables namespacing of each's R class so that its R class inclu
 
 android.nonTransitiveRClass=false
 
