--- a/gradle.properties
+++ b/gradle.properties
@@ -17,22 +17,7 @@ android.useAndroidX=true
 
 #yoyoyo
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 android.nonTransitiveRClass=false
 
 
-VERSION_NAME=2.0Mui
+VERSION_NAME=1.2-beta
