--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -1,4 +1,4 @@
-name: Show Last 5 Commits
+name: build-status
 
 on:
   push:
@@ -6,41 +6,21 @@ on:
       - main
 
 jobs:
-  show-commits:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-    - name: Show Last 5 Commits
-      run: |
-        git log -n 5 --pretty=format:"%h - %an, %ar : %s"
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
 
-    # - name: Get previous version
-    #   id: get-previous-version
-    #   run: |
-    #       commit_hashes=$(git rev-list -n 5 origin/main -- gradle.properties)
-    #       echo "Commit hashes: $commit_hashes"
-    
-    #       second_last_commit_hash=$(echo "$commit_hashes" | tail -n 3)
-    #       echo "Second-to-last commit hash: $second_last_commit_hash"
-    
-    #       previous_version=$(git show $second_last_commit_hash:gradle.properties | grep '^version' | cut -d= -f2 | tr -d '[:space:]')
-    #       echo "data: $(git show $second_last_commit_hash:gradle.properties)"
-    #       echo "Previous version: $previous_version"
-    #       echo "::set-output name=prev_version::$previous_version"
+      - name: setup gradle
+        run: chmod +x gradlew
 
-    #   - name: Get current version
-    #     id: get-current-version
-    #     run: |
-    #       echo "::set-output name=current_version::$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')"
-
-    #   - name: Check for version change
-    #     run: |
-    #       echo "Previous version: ${{ steps.get-previous-version.outputs.prev_version }}"
-    #       echo "Current version: ${{ steps.get-current-version.outputs.current_version }}"
-    #       if [ "${{ steps.get-previous-version.outputs.prev_version }}" = "${{ steps.get-current-version.outputs.current_version }}" ]; then
-    #         echo "No version change. Exiting workflow."
-    #         exit 0
-    #       fi
+      - name: Build
+        run: ./gradlew build
