--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 # any settings specified in thiile.
 # For more details on ild et visit
 # http://www.gradle.org
-# Specifies the JVM  u 
+# Specifies the JVM  u opopop
 # The setting is particulare
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
