--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -98,6 +98,9 @@ jobs:
           commit-message: ${{ env.COMMIT_MESSAGE }}2.1
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Approve PR
+        run: 'gh pr review --approve'
+
       - name: Turn On PR Auto-Merge
         if: |
           env.version_change == 'true' ||
@@ -108,23 +111,6 @@ jobs:
           ${{ steps.create-pr.outputs.pull-request-number }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: caghsfasfj
-        id: auto-merge
-        if: |
-          env.version_change == 'true' ||
-          env.VERSION_LINE_CHANGED == 'true'
-        run: >
-          gh pr status
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-          
-      - name: Dele22222
-        if: |
-          env.version_change == 'true' ||
-          env.VERSION_LINE_CHANGED == 'true'
-        run: echo "${{ steps.auto-merge.outputs }}"
 
       - name: Delete branch
         if: |
