--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -100,6 +100,8 @@ jobs:
 
       - name: Approve PR
         run: 'gh pr review --approve'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Turn On PR Auto-Merge
         if: |
