--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -99,7 +99,9 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Approve PR
-        run: 'gh pr review --approve'
+        run: >
+          gh pr review --approve ${{ github.repository }}
+          ${{ steps.create-pr.outputs.pull-request-number }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
