--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -100,8 +100,7 @@ jobs:
 
       - name: Approve PR
         run: >
-          gh pr review --approve ${{ github.repository }}
-          ${{ steps.create-pr.outputs.pull-request-number }}
+          gh pr review --approve ${{ steps.create-pr.outputs.pull-request-number }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
