--- a/gradle.properties
+++ b/gradle.properties
@@ -1,68 +1,6 @@
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 # The setting is particulare
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
@@ -74,4 +12,4 @@ android.useAndroidX=true
 android.nonTransitiveRClass=false
 
 
-VERSION_NAME=1.8-autu
+VERSION_NAME=1.1-alpha
