--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           ref: ${{  github.head_ref }}
           fetch-depth: 0
+          token: ''
 
       - name: Get previous version
         id: get-previous-version
